fixed overflow when entering descriptions

--- a/HoloDesk Apps/styles/frame.css
+++ b/HoloDesk Apps/styles/frame.css
@@ -5,7 +5,7 @@ iframe {
     display: block;       /* iframes are inline by default */
     background: #000;
     border: none;         /* Reset default border */
-    height: 90vh;        /* Viewport-relative units */
+    height: 87vh;        /* Viewport-relative units */
     width: 100vw;
 }
 
